force-app/main/default/objects/Employment__c/Employment__c.object-meta.xml
<CustomObject>
    <description
  >Represents information about a person&apos;s employment history.</description>
    <label>Employment</label>
    <nameField>
        <displayFormat>Emp-{00000}</displayFormat>
        <label>Employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>