force-app/main/default/objects/Employment__c/fields/AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncome__c</fullName>
    <description>Annual Income</description>
    <label>Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>