force-app/main/default/objects/Employment__c/fields/ApplicantTemp__c.field-meta.xml
<CustomField>
    <fullName>ApplicantTemp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicant and Employment realtionship</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Employment</relationshipLabel>
    <relationshipName>EmploymentsTemp</relationshipName>
    <type>Lookup</type>
</CustomField>