force-app/main/default/objects/Employment__c/fields/BasePay__c.field-meta.xml
<CustomField>
    <fullName>BasePay__c</fullName>
    <label>Base Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>