force-app/main/default/objects/Employment__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <description>Bonus where employees are given a percentage of the company&apos;s profit</description>
    <label>Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>