force-app/main/default/objects/Employment__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of the property</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>