force-app/main/default/objects/Employment__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <description
  >The employer may pay you the commission after they have finalised the business deal and received the funds for it</description>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>