force-app/main/default/objects/Employment__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Employment proof document type</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form I-9</fullName>
            </value>
            <value>
                <fullName>Employment Authorization Document Card</fullName>
            </value>
            <value>
                <fullName>Payslip</fullName>
            </value>
            <value>
                <fullName>W2</fullName>
            </value>
            <value>
                <fullName>Utility Bill</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>