force-app/main/default/objects/Employment__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Employment duration in years.</description>
    <label>Employment Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>