force-app/main/default/objects/Employment__c/fields/DurationYears__c.field-meta.xml
<CustomField>
    <fullName>DurationYears__c</fullName>
    <description>Years of employmengt duration</description>
    <label>Duration years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>