force-app/main/default/objects/Employment__c/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <description>Employer Name</description>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>