force-app/main/default/objects/Employment__c/fields/EmploymentDurationMonths__c.field-meta.xml
<CustomField>
    <fullName>EmploymentDurationMonths__c</fullName>
    <description>Months of employmengt duration</description>
    <label>Employment Duration Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>