force-app/main/default/objects/Employment__c/fields/EnlistmentDate__c.field-meta.xml
<CustomField>
    <fullName>EnlistmentDate__c</fullName>
    <description>Capture Enlistment date for military type</description>
    <label>Enlistment Date</label>
    <type>Date</type>
</CustomField>