force-app/main/default/objects/Employment__c/fields/GrossMonthlySalary__c.field-meta.xml
<CustomField>
    <fullName>GrossMonthlySalary__c</fullName>
    <description>Gross monthly salary of employee</description>
    <label>Gross Monthly Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>