force-app/main/default/objects/Employment__c/fields/IncomeType__c.field-meta.xml
<CustomField>
    <fullName>IncomeType__c</fullName>
    <description>Type of income</description>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
             <value>
                <fullName>Hourly</fullName>
            </value>
             <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>