force-app/main/default/objects/Employment__c/fields/isDocumentGenerated__c.field-meta.xml
<CustomField>
    <fullName>isDocumentGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if employment verification documents are generated successfully.</description>
    <inlineHelpText>Flag to check if employment verification documents are generated successfully.</inlineHelpText>
    <label>isDocumentGenerated</label>
    <type>Checkbox</type>
</CustomField>