force-app/main/default/objects/Employment__c/fields/OtherPay__c.field-meta.xml
<CustomField>
    <fullName>OtherPay__c</fullName>
    <label>Other Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>