force-app/main/default/objects/Employment__c/fields/Overtime__c.field-meta.xml
<CustomField>
    <fullName>Overtime__c</fullName>
    <description>The compensation you receive for working beyond normal working hours</description>
    <label>Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>