force-app/main/default/objects/Employment__c/fields/OwnershipShareType__c.field-meta.xml
<CustomField>
    <fullName>OwnershipShareType__c</fullName>
    <description
  >A share represents a unit of equity ownership in a company. Shareholders are entitled to any profits that the company may earn in the form of dividends</description>
    <label>Ownership Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LessThanShareValue</fullName>
                <label>I have an ownership share of less than 25%</label>
            </value>
            <value>
                <fullName>MoreThanShareValue</fullName>
                <label>I have an ownership share of 25% or more</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>