force-app/main/default/objects/Employment__c/fields/OwnershipShareValue__c.field-meta.xml
<CustomField>
    <fullName>OwnershipShareValue__c</fullName>
    <description
  >A share is an indivisible unit of capital, expressing the ownership relationship between the company and the shareholder</description>
    <label>Ownership Share Value</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>