force-app/main/default/objects/Employment__c/fields/PayCycle__c.field-meta.xml
<CustomField>
    <fullName>PayCycle__c</fullName>
    <description
  >time interval when payment is made for an employee</description>
    <label>Pay Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Semi Monthly</fullName>
            </value>
            <value>
                <fullName>BiWeekly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>