force-app/main/default/objects/Employment__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>Phone Number</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>