force-app/main/default/objects/Employment__c/fields/VerificationType__c.field-meta.xml
<CustomField>
    <fullName>VerificationType__c</fullName>
    <description>employment verification type</description>
    <label>Verification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>